# rogu

./: LICENSE.TXT  pyproject.toml
src/cmore/: __init__.py
src/rogu/: __init__.py  log.py  rogu.py
src/rogu/tests/: example.py
