[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rogu"
version = "0.1.0"
description = "Logging"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.md" }
authors = [
  { name = "Dan Gunter" },
]
keywords = ["logging", "utilities"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

dependencies = [
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8",
  "pytest-cov",
  "black>=26",
]

[tool.setuptools]
package-dir = {"" = "src"}

#[project.scripts]
#name = "rogu.<something>:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rogu = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["src"]
pythonpath = ["src"]
markers = [
  "unit: marks tests as unit tests",
  "component: marks tests as component tests",
  "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.12"
files = ["src"]
mypy_path = "src"
strict = true
warn_unused_configs = true
show_error_codes = true
